--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 #systeme generation db
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8075
+spring.servlet.multipart.enabled=true
 
